--- a/requirements.yaml
+++ b/requirements.yaml
@@ -182,16 +182,16 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h53f4e23_5
   - zstd=1.5.5=h4f39d0f_0
-  - pip:
-      - "---==0.1.0"
-      - fsspec==2023.12.2
-      - jinja2==3.1.2
-      - markupsafe==2.1.3
-      - mpmath==1.3.0
-      - networkx==3.2.1
-      - spacepy==0.4.1
-      - sympy==1.12
-      - torch==2.1.2
-      - torchaudio==2.1.2
-      - torchvision==0.16.2
-prefix: /Users/ogawa/miniconda3/envs/aug
+
+  # - pip:
+  #     - "---==0.1.0"
+  #     - fsspec==2023.12.2
+  #     - jinja2==3.1.2
+  #     - markupsafe==2.1.3
+  #     - mpmath==1.3.0
+  #     - networkx==3.2.1
+  #     - spacepy==0.4.1
+  #     - sympy==1.12
+  #     - torch==2.1.2
+  #     - torchaudio==2.1.2
+  #     - torchvision==0.16.2
